Fix gradle plugin examples and docs