@@ -3,5 +3,4 @@ Update courier version in `gradle.properties`
 
 To test
 -------
-export GRADLE_OPTS="-XX:MaxPermSize=512M"
 gradle build --rerun-tasks --stacktrace
